Add more operation for product CURD
