# product-service/handler/product_handler.go
@@ -23,7 +23,7 @@ import (
 // @Router /products [get]
 func (h *Handler) ListProducts(c *gin.Context) {
 
-	products, err := h.ProductService.GetAll()
+	products, err := h.ProductService.List()
 
 	if err != nil {
 		log.Printf("Failed to sign up product: %v\n", err.Error())
@@ -35,13 +35,13 @@ func (h *Handler) ListProducts(c *gin.Context) {
 
 }
 
-// @Summary Get a single product
+// @Summary Get a product
 // @Produce  json
 // @Param id path int true "ID"
 // @Failure 404 {object} swagdto.Error404
 // @Success 200 {object} swagdto.ProductResponse
-// @Router /api/v1/products/{id} [get]
-func (h *Handler) GetProductById(c *gin.Context) {
+// @Router /products/{id} [get]
+func (h *Handler) GetProduct(c *gin.Context) {
 
 	id := com.StrTo(c.Param("id")).MustInt()
 	valid := validation.Validation{}
@@ -52,7 +52,7 @@ func (h *Handler) GetProductById(c *gin.Context) {
 		return
 	}
 
-	product, err := h.ProductService.GetById(id)
+	product, err := h.ProductService.Get(id)
 	if err != nil {
 		common.BadRequest(c, err)
 		return
@@ -63,12 +63,11 @@ func (h *Handler) GetProductById(c *gin.Context) {
 
 // @Summary Add product
 // @Produce  json
-// @Param user body model.ProductForm true "User ID"
+// @Param user body model.ProductForm true "Product ID"
 // @Failure 404 {object} swagdto.Error404
 // @Success 200 {object} swagdto.ProductResponse
-// @Router /api/v1/products [post]
+// @Router /products [post]
 func (h *Handler) AddProduct(c *gin.Context) {
-
 	var form model.ProductForm
 
 	ok, errorData := common.ValidateForm(c, &form)
@@ -78,6 +77,102 @@ func (h *Handler) AddProduct(c *gin.Context) {
 	}
 
 	product, err := h.ProductService.Add(&form)
+	if err != nil {
+		common.BadRequest(c, err)
+		return
+	}
+
+	common.SuccessResponse(c, "product", product)
+}
+
+// @Summary Update product
+// @Produce  json
+// @Param id path int true "ID"
+// @Param user body model.ProductForm true "Product ID"
+// @Failure 404 {object} swagdto.Error404
+// @Success 200 {object} swagdto.ProductResponse
+// @Router /products/{id} [post]
+func (h *Handler) UpdateProduct(c *gin.Context) {
+
+	id := com.StrTo(c.Param("id")).MustInt()
+	valid := validation.Validation{}
+	valid.Min(id, 1, "id")
+
+	if valid.HasErrors() {
+		common.BadRequest(c, valid.Errors)
+		return
+	}
+
+	var form model.ProductForm
+
+	ok, errorData := common.ValidateForm(c, &form)
+	if !ok {
+		common.ErrorResponse(c, errorData)
+		return
+	}
+
+	product, err := h.ProductService.Update(&form, id)
+	if err != nil {
+		common.BadRequest(c, err)
+		return
+	}
+
+	common.SuccessResponse(c, "product", product)
+}
+
+// @Summary Patch product
+// @Produce  json
+// @Param id path int true "ID"
+// @Param user body model.ProductForm true "Product ID"
+// @Failure 404 {object} swagdto.Error404
+// @Success 200 {object} swagdto.ProductResponse
+// @Router /products/{id} [patch]
+func (h *Handler) PatchProduct(c *gin.Context) {
+
+	id := com.StrTo(c.Param("id")).MustInt()
+	valid := validation.Validation{}
+	valid.Min(id, 1, "id")
+
+	if valid.HasErrors() {
+		common.BadRequest(c, valid.Errors)
+		return
+	}
+
+	var form model.ProductPatchForm
+
+	ok, errorData := common.ValidateForm(c, &form)
+	if !ok {
+		common.ErrorResponse(c, errorData)
+		return
+	}
+
+	product, err := h.ProductService.Patch(&form, id)
+	if err != nil {
+		common.BadRequest(c, err)
+		return
+	}
+
+	common.SuccessResponse(c, "product", product)
+}
+
+// @Summary Delete a product
+// @Produce  json
+// @Param id path int true "ID"
+// @Failure 404 {object} swagdto.Error404
+// @Success 200 {object} swagdto.ProductResponse
+// @Router /products/{id} [delete]
+func (h *Handler) DeleteProduct(c *gin.Context) {
+
+	id := com.StrTo(c.Param("id")).MustInt()
+	valid := validation.Validation{}
+	valid.Min(id, 1, "id")
+
+	if valid.HasErrors() {
+		common.BadRequest(c, valid.Errors)
+		return
+	}
+
+	product, err := h.ProductService.Delete(id)
 	if err != nil {
 		common.BadRequest(c, err)
 		return
